<resources>
    <string name="app_name">情感之家</string>
    <string name="confirm_format">%1$s(%2$d/%3$d)</string>
    <string name="maxnum">最多选择%1$d张图片</string>
    <string name="minnum">最少选择一张图片</string>
    <string name="open_camera_failure">打开相机失败</string>
    <string name="permission_camera_denied">请打开相关权限</string>
    <string name="permission_storage_denied">请打开存储空间权限</string>
    <string name="sd_disable">SD卡不可用</string>
    <string name="takephoto">拍照</string>
    <string name="search_emotion_tint">请输入关键字如婚姻、恋爱等搜索内容</string>
    <string name="share_des_short">请输入聊天关键字</string>
    <string name="web_liability_exemption">注：本文仅作网络分享，不涉及任何商业利益，不用于任何违法用途。相关文章均来源于其他微信公众号或网络媒体，如涉及版权问题，敬请联系我们，我们会在24小时之内回复并将文章撤除。</string>
    <string name="share_des_explain">输入妹子说的话，点击搜索即可获得与之匹配的回复，一键复制到对应聊天软件打开即可粘贴；</string>
    <string name="share_des_help"><u>使用帮助</u></string>
    <string name="privacy_statement">欢迎你使用%1$s及服务！\n
特别提示\n
用户在使用技术开发方（即，以下统称“技术开发方”）提供的各项服务之前，应仔细阅读本《用户协议》（以下简称“本协议”）。\n
用户一旦登录或使用技术开发的服务，即视为用户已了解并同意本协议各项内容，本协议立即在用户与本技术开发方之间产生法律效力。\n
用户登录、使用本产品服务的全部活动将受到本协议的约束并承担相应的责任和义务。\n
如果用户不同意本协议任何内容的，请用户立即停止使用技术开发放所提供的全部服务。\n
一、协议主体\n
本协议是用户与技术开发方关于用户使用本服务所订立的协议。声明本产品不涉及任何金融贷款相关服务，任何法律责任与App Store无关。由协议方承担责任。\n
二、关于本服务\n
1.本服务内容是指技术开发方通过本应用程序向其合作伙伴及用户提供相关服务（简称“本服务”）。\n
2.对用户使用的本服务，技术开发方会不断丰富用户使用本服务的终端、形式等。\n
3.许可的范围：\n
（1）技术开发方授予用户一项个人的、不可转让及非排他性的许可，以使用本应用程序。\n
（2）本条及本协议其他条款未明示授权的其他一切知识产权权利仍有技术开放方保留。技术开发方如果未行使前述任何权利，并不构成对该权利的放弃。\n
三、账号登录\n
为使用本应用程序用户可能需要输入个人信息进行登录与使用。用户清楚知晓，其向技术开发方提供的账户仅供本人使用，否则，用户可能会对用户或他人造成侵权。用户承诺并同意、使用同一设备、同一身份证号或账号使用本协议项下的服务，均视为用户本人的行为。用户应妥善保管自身设备、身份证件或账户信息，如用户违反本约定给用户或他人造成损失的，技术开发方不应也不会承担任何法律责任。用户若因此给技术开发方造成损失的，应承担技术开发方所遭受的全部损失。\n
四、应用程序的使用\n
如果用户从非技术开发方合作伙伴的应用程序或非技术开发方合作伙伴处获取本应用程序或与本应用程序名称相同的安装程序，技术开发方无法保证该应用程序能够正常使用，并对因此给用户造成的损失不与负责。\n
五、应用程序的更新\n
1.为了增进用户体验、完善服务内容，技术开放方将不断努力为用户实时提供应用程序更新（这些更新可能会采取应用程序替换、修改、功能强化、版本升级等形式）。\n
2.为了改善用户体验，并保证服务的安全性和功能的一致性，技术开发方有权不经向用户特别通知而对应用程序进行更新，或者对应用程序的部分功能效果进行改变或限制。\n
六、用户个人信息保护\n
1.保护用户个人信息是技术开放方的一项基本原则，技术开发方将会采取合理的措施保护用户的个人信息。除法律法规规定及用户授权的情形外，未经用户许可技术开发方不会向任何第三方公开、透露用户个人信息。\n
2.用户在登录账号或使用本服务的过程中，可能需要填写一些必要的信息。若用户填写的信息不完整或不真实，则可能无法正常使用本服务。\n
3.一般情况下，用户可随时浏览、修改自己提交的信息，但出于安全性和身份识别的考虑，用户可能无法修改注册时提供的初始注册信息及其他验证信息。\n
4.技术开放方将运用各种安全技术和程序建立完善的管理制度来保护用户的个人信息，以免遭受未经授权的访问、使用或披露。\n
七．授权事项及行为规范\n
1.授权事项\n
（1）用户充分理解并同意：用户在使用本服务时，可能需要使用用户终端设备的相关权限、接口及相关设备信息等才能实现相应的功能。\n
（2）用户可以选择不向技术开发方提供用户的某些信息，但因此可能会导致相关服务功能无法实现。\n
2.用户禁止行为\n
除非法律允许或者技术开发方书面许可，用户不得从事下列行为：\n
（1）删除本应用程序及其副本上关于著作权的信息。\n
（2）对本应用程序进行反向工程、反向汇编、反向编译，或者以其他方式尝试发现本应用程序的源代码。\n
（3）对技术开发方拥有知识产权的内容进行使用、出租、租借、复制、修改、链接、转载、汇编、发表、出版等。\n
（4）通过修改或伪造应用程序运行中的指令、数据，增加、删减、变动应用程序的功能或运行效果，或者将用于上述用途的应用程序、方法进行运营或向公众传播，无论这些行为是否为商业目的。\n
（5）自行、授权他人或利用第三方应用程序对本应用程序及其组件、模板、数据等进行干扰。\n
（6）其他未经技术开发方明示授权的行为。\n
八、知识产权声明\n
1.技术开发方是本应用程序的知识产权权利人。本应用程序的著作权、商标权、专利权、商业秘密等知识产权，以及与本应用程序相关的所有信息内容（包括但不限于文字、图片、音频、视频、图表、界面设计、版面框架、有关数据或电子文档等）均受中华人民共和国和相应的国际条约保护，技术开发方依法享有上述知识产权，但相关权利人依照法律法规应享有的权利除外。\n
2.未经技术开发方或相关权利人书面同意，用户不得为任何商业或非商业目的自行或许可任何第三方实施、利用、转让上述知识产权。\n
九、终端安全责任\n
1.用户理解并同意，本应用程序或本服务同大多数互联网应用程序、服务一样，可能会受多种因素影响（包括但不限于用户原因、网络服务质量、社会环境等）；也可能会受各种安全问题的侵扰（包括但不限于他人非法利用用户资料，进行现实中的骚扰；用户下载安装的其他应用程序或访问的其他网站中含有病毒、木马病毒或其他恶意程序，威胁用户终端的信息和数据的安全，继而影响本应用程序、本服务的正常使用等）。因此，用户应加强信息安全及个人信息的保护意识，注意密码保护，以免遭受损失。出现上述情况时技术开发方将努力在第一时间与相关方配合，技术进行修复，但是由此给用户造成的技术损失技术开发方在法律允许的范围内免责。\n
2.用户不得制作、发布、使用、传播用于窃取技术开发方账号及他人个人信息、财产的恶意程序。\n
3.维护应用程序安全与正常使用是技术开发方和用户的共同责任，技术开发方将按照行业标准合理审慎地采取必要技术措施保护用户的终端信息和数据安全。\n
4.在法律允许的范围内，技术开发方对以下情形导致的服务中断或受阻不承担责任：\n
（1）受到计算机病毒、木马或其他恶意程序、黑客攻击的破坏。\n
（2）用户或技术开发方的电脑软件、系统、硬件和通信线路出现故障。\n
（3）用户操作不当。\n
（4）用户通过非技术开发方授权的方式使用本服务。\n
（5）其他技术开放方无法控制或合理预见的情形。\n
十、不可抗力及合理免责\n
“不可抗力”是指在本协议签订后发生的、受影响一方无法预见、无法避免并无法克服的客观情况。此等事件包括但不限于水灾、火灾、旱灾、台风、地震及其它自然灾害、罢工、骚动、暴乱及战争以及政府部门的作为或不作为、法律法规或政策调整、数据来源变更（包括但不限于其他服务内容及形式的变更）、国内数据渠道瘫痪、黑客攻击、计算机病毒侵入、新型病毒爆发、因电信运营商问题导致网络中断服务器不可访问、停电、系统故障、传输线路、通信故障等技术开发方无法控制的因素。因不可抗力影响而不能履行或不能完全履行本协议的不视为违约，不应承担相应违约责任。\n
十一、其他\n
1.用户使用本应用程序或本服务即视为用户已阅读受本协议的约束。技术开发方有权在必要时修改本协议条款。用户可以在本应用程序、本服务的最新版本中查阅相关协议条款。本协议条款变更后，如果用户继续登录、使用本应用程序、本服务，即视为用户已同意修改后的协议。如果用户不接受修改后的协议，应当停止使用本应用程序。\n
2.本协议的成立、生效、履行、解释及纠纷解决，适用于中华人民共和国大陆地区法律（不包括冲突法）。\n
3.若用户与技术开放方之间发生任何纠纷或争议，首先应友好协商解决；协商不成的，用户同意将纠纷或争议提交被告方所在地人民法院管辖。\n
4.本协议所有条款的标题仅为阅读方便，本身并无实际涵义，不能作为本协议涵义的解释依据。\n
5.本协议条款无论因何种原因部分无效或不可执行，其余条款仍有效，对双方具有约束力。</string>
    <string name="login_protocol">一、使用协议的接受与修改\n
此协议是用户与本App之间的协议，本App依据此协议为用户提供服务。\n
此协议服务条款构成用户（无论是个人或者单位）使用本App所提供服务之先决条件。如用户不同意此协议服务条款或其随时对其的修改，用户应不使用或主动取消本App提供的服务。用户的使用行为将视为其对此协议服务条款及其随时修改版本的完全接受；\n
这些条款可由本App随时更新，且无需另行通知。修改后的服务条款一旦在本App上公布即取代原来的服务条款，并构成本条款整体之一部分。用户可随时登录本App查阅最新的服务条款。\n
\n二、服务\n
1.用户可使用本App各类表情、上传图片、文字作品等（以下简称“内容”），用户担保对其通过本App上载、传播的内容负全部法律责任。\n
2.用户在此明确陈述并保证对其上载、传播到本App上的所有内容，拥有或取得了所有必要的权力并承担全部的法律责任，包括但不限于：用户有权或已取得必要的许可、授权、准许来使用或授权本App使用所有与上传内容有关的所有专利、商标、商业秘密、版权及其他私有权利；\n
3. 本App并不担保用户上传的所有内容能够通过本App服务为其他用户所获取、浏览，本App没有义务和责任对所有用户上载、传播的内容进行监测；但本App保留根据国家法律、法规的要求对上载、传播的内容进行不定时抽查的权利，并有权在不事先通知的情况下移除违法、侵权的内容。此款的规定并不排除用户对上传内容的版权担保，亦并非表明本App有责任及能力判断用户上传内容的版权归属。\n
\n三、用户注册\n
1.如果用户使用本App进行内容的上载、传播服务，用户需要注册一个账号、密码，并确保注册信息的真实性、正确性及完整性，如果上述注册信息发生变化，用户应及时更改。在安全完成本服务的登记程序并收到一个密码及账号后，用户应维持密码及账号的机密安全。用户应对任何人利用用户的密码及账号所进行的活动负完全的责任，本App无法对非法或未经用户授权使用用户账号及密码的行为做出甄别，因此本App不承担任何责任。在此，用户同意并承诺做到：\n
经本App注册系统完成注册程序并获得本App账号的用户即为本App的正式用户，即获得本App规定用户所应享有的一切权限；本App有权对其正式用户的权限设计进行变更。\n
在用户填写注册资料时，用户要确保所填写的信息是真实有效的。如果因注册信息不真实而引起的问题，并对问题发生所带来的后果，本App不负任何责任。\n
用户注册账号时不得以下列内容作为账号名称，如发现用户账号中含有不雅文字或不恰当名称的，本App保留取消其用户资格的权利。\n
除此协议注明之服务条款外，其他一切因使用本App而引致之任何意外、疏忽、合约毁坏、诽谤、版权或其他知识产权侵犯及其所造成的损失（包括但不限于因下载而感染电脑病毒）， 本App概不负责，亦不承担任何法律责任。\n
(1)请勿以党和国家领导人或其他社会名人的真实姓名、字号、艺名、笔名注册；\n
(2)请勿以国家机构或其他机构的名称注册；\n
(3)请勿注册不文明、不健康名字，或包含歧视、侮辱、猥亵类词语的账号；\n
(4)请勿注册易产生歧义、引起他人误解或其它不符合法律法规、规章制度等规定的账号。\n
2. 账号所有权归本APP所有，用户完成申请注册手续后，获得账号的有限使用权。\n
3. 账号使用权仅属于初始申请注册人，禁止赠与、借用、租用、转让或售卖。如果发现使用者并非账号初始注册人，本App有权在未经通知的情况下回收该账号而无需向该账号使用人承担法律责任，由此带来的包括并不限于用户资料等清空等损失由用户自行承担。本App禁止用户私下有偿或无偿转让账号，以免因账号此产生纠纷，用户应当自行承担因违反此要求而遭致的任何损失，同时本App保留追究上述行为人法律责任的权利。\n
4. 用户承担本App账号与密码的保管责任，并就其账号及密码项下之一切活动负全部责任。用户须重视本App账号密码和公开邮箱的密码保护。用户同意如发现他人未经许可使用其账号时立即通知本App。\n
5. 用户账号在丢失或遗忘密码后，须遵照本App的申诉途径及时申诉请求找回账号。用户应不断提供能增加账号安全性的个人密码保护资料。用户可以凭初始注册资料及个人密码保护资料填写申诉单向本App申请找回账号，本App的密码找回机制仅负责识别申诉单上所填资料与系统记录资料的正确性，而无法识别申诉人是否系真正账号使用人。对用户因被他人冒名申诉而致的任何损失，本App不承担任何责任，用户知晓本App账号及密码保管责任在于用户，本App并不承诺账号丢失或遗忘密码后用户一定能通过申诉找回账号。\n
6. 用户注册本App账号后如果长期不使用，本App有权回收账号，以免造成资源浪费，由此带来的损失由用户自行承担。\n
7. 本着有效利用本App账号资源，保障更多合法用户权益为目的，对于恶意注册或者长期未登录的账号，系统有权回收。\n
\n四、版权声明和责任声明\n
1. 用户上传的内容是指用户在本App上上载、传播的文字、图片、视频、音频或其它任何形式的内容；\n
2. 用户在本App上传或发布内容的，用户应保证其对该等内容享有合法著作权/版权或者相应授权，并且用户同意授予本App对其上传内容的在全球范围内的免费、不可撤销的、无限期的、并且可转让的非独家使用权许可权、复制权、发行权、出租权、展览权、表演权、放映权、广播权、信息网络传播权、摄制权、改编权、翻译权、汇编权、使用权和收益权，本App有权展示、发布及推广前述内容，有权对前述内容进行任何形式的复制、修改、出版、发行及以其他方式使用或者授权第三方进行复制、修改、出版、发行及以其他方式使用；\n
3. 本App在此郑重提醒用户注意，任何经由本App上载、张贴、发送电子邮件或任何其它方式传送的资讯、资料、文字、软件、照片、图形、视讯、信息或其它资料，无论系公开还是私下传送，均由内容提供者、上传者承担责任，本App不承担任何责任；\n
4. 本App无法预先知晓并合理控制经由本App传送之内容，亦无法准确判定内容上传者的真实身份。有鉴于此，用户已预知使用本App时，可能会接触到令人不快、不适当或令人厌恶之内容，用户在此同意放弃由此而产生的针对本App的任何追索权。但本App有权依法停止传输任何前述内容并采取相应行动，包括但不限于暂停用户使用本App的全部或部分功能，保存有关记录，并向有关机关报告；\n
5. 用户需独立对自己在本App上实施的行为承担法律责任。若用户使用本App服务的行为不符合此协议，本App有权做出独立判断，且在无需事先通知的情况下立即取消用户的账号。用户若在本App上散布和传播反动、色情或其他违反国家法律的信息，本App的系统记录有可能作为用户违反法律的证据；\n
6. 因用户进行上述内容在本App的上载、传播而导致任何第三方提出索赔要求或衍生的任何损害或损失，由用户承担全部责任。\n
\n五、第三方链接\n
为方便用户使用，本App可能会提供与第三方国际互联网网站或资源进行链接。除非另有声明，本App无法对第三方网站服务进行控制，用户因使用或依赖上述网站或资源所产生的损失或损害，本App不负担任何责任。\n
\n六、用户行为\n
1. 用户不得使用本App进行任何非法、淫秽、色情及其他违反公序良俗之活动，包括但不限于非法传销、诈骗、侵权、反动行为等，本App有权依据自己的独立判断在不事先通知的情况下立即删除、停止从事此类活动的账号使用；\n
2. 除用户与本App另有约定外，用户同意本App的服务仅供用户个人非商业性质的使用，用户不可对本App服务的任何部分或服务之使用或获得进行复制、拷贝、出售，或利用本App进行调查、广告或其他商业目的，但本App对特定服务另有适用指引或规定的除外。\n
\n七、知识产权及其他权利\n
本App为提供服务而使用的任何软件（包括但不限于软件中所含的任何图像、照片、动画、录像、文字和附加程序、随附的帮助材料）的一切权利均属于该软件的著作权人，未经该软件的著作权人许可，用户不得对该软件进行反向工程、反向编译或反汇编，或以其他方式发现其原始编码。\n
\n八、版权政策\n
本App尊重并采取合理措施保护版权人的合法利益，我们已制定了相应的版权政策与版权投诉机制，该版权政策与投诉机制均构成此协议的有机组成部分。版权政策与投诉机制详情请参考《知识产权声明》。\n
\n九、隐私权政策\n
1.尊重用户个人隐私是本App的一项基本政策。所以，本App在未经用户的授权时不得公开、编辑或透露其注册资料及保存在本App客户端中的非公开内容，除非本App在诚信的基础上认为透露这些信息在以下几种情况是必要的：\n
(1) 遵守有关法律规定，包括在国家有关机关查询时，提供用户在本App上发布的信息内容及其发布时间、互联网地址或者域名。\n
(2) 保持维护本App的知识产权和其他重要权利。\n
(3) 在紧急情况下竭力维护用户个人和社会大众的隐私安全。\n
(4) 根据本条款相关规定或者本App认为必要的其他情况下。\n
2. 但是用户在注册时选择或同意，或用户与本App及合作单位之间就用户个人隐私信息公开或使用另有约定的除外，同时用户应自行承担因此可能产生的任何风险，本App对此不予负责。\n
3. 用户同意个人隐私信息是指那些能够对用户进行个人辨识或涉及个人通信的信息，包括下列信息：用户的姓名，身份证号，手机号码，IP地址，电子邮件地址信息。而非个人隐私信息是指用户对本软件的操作状态以及使用习惯等一些明确且客观反映在本App服务器端的基本记录信息和其他一切个人隐私信息范围外的普通信息。\n
4. 一般而言，本App基于下列原因需要使用到用户的信息资源：(1) 执行软件验证服务。(2)执行软件升级服务。（3）网络同步服务。(4) 提高用户的使用安全性并提供客户支持。（5）因用户使用本软件特定功能或因用户要求本App或合作单位提供特定服务时，本App或合作单位则需要把用户的信息提供给与此相关联的第三方。（6）其他有利于用户和本App利益的。\n
5. 在不透露单个用户隐私资料的前提下，本App有权对整个用户数据库进行分析并对用户数据库进行商业上的利用。\n
\n十、未成年人隐私权的保护\n
1.我们将建立和维持一个合理的程序，以保护未成年人个人资料的保密性及安全性。本App郑重声明：任何18岁以下的未成年人参加网上活动应事先得到家长或其法定监护人（以下统称为"监护人"）的可经查证的同意。\n
2. 监护人应承担保护未成年人在网络环境下的隐私权的首要责任。\n
3. 未经监护人之同意，本App将不会使用未成年人之个人资料，亦不会向任何第三方披露或传送可识别该未成人的个人资料，但是，由于相关法律法规要求、国家机关的查询要求、或在紧急情况下竭力维护用户个人和社会大众的隐私安全等原因除外。\n
4. 本App收集未成年人的个人资料，这些资料只是单纯作为保护未成年人参与网络活动时的安全，而非作为其它目的之利用。本App保证不会要求未成年人提供额外的个人资料，以作为允许其参与网上活动的条件。\n
\n十一、青少年用户特别提示\n
青少年用户必须遵守全国青少年网络文明公约，青少年网友在参与网络活动中注意以下事项，正确学习使用网络，加强自我保护：\n
1. 青少年网友要注意区分网络与现实的区别，避免沉迷于网络而影响了日常的学习生活。\n
2. 网友填写个人资料时，加强个人保护意识，以免不良分子对个人生活造成骚扰。\n
3. 未满18岁青少年应在监护人指导和监督下上网。青少年网友要善于网上学习，不浏览不良信息，要诚实友好交流，不侮辱欺诈他人。\n
4. 青少年网友应增强自我保护意思，避免陌生网友会面或参与联谊活动，以免为不法分子所乘，危及自身。\n
5. 青少年网友要维护网络安全，不破坏网络秩序如有违法行为，本APP保留配合公安和电信部门追查的权利。\n
\n十二、出口与国际使用\n
本App通过中华人民共和国境内的设施提供和控制服务，本App不担保所提供或控制的服务在其他国家或地区是适当的、可行的，任何在其他司法管辖区使用本App的用户应自行确保遵守当地的法律、法规，本App对此不负任何责任。\n
\n十三、服务终止\n
1. 用户同意本App有权基于其自行之考虑，因任何理由，包括但不限于缺乏使用或本App认为用户已经违反此协议的文字及精神，而终止用户的账号或服务之全部或任何部分，并将用户在本App看的服务内的任何内容加以移除并删除；\n
2. 用户同意依此协议任何规定提供之服务，无需进行事先通知即可中断或终止，用户承认并同意，本App可立即关闭或删除用户的账号及用户账号中所有相关信息及文件，及/或禁止继续使用前述文件或本App的服务。 此外，用户同意若本App的服务之使用被中断、终止或用户的账号及相关信息和文件被关闭、删除，本App对用户或任何第三人均不承担任何责任。\n
\n十四、法律适用和管辖\n
1. 此协议的生效、履行、解释及争议的解决均适用中华人民共和国法律。\n
2. 如就此协议内容或其执行发生任何争议，应尽量友好协商解决；协商不成时，则争议各方均可向本APP注册所在地具有管辖权的人民法院提起诉讼。\n
3. 本《协议》的一切解释权与修改权归本App所有。\n</string>
    <string name="collect">收藏</string>
    <string name="wx">微信</string>
    <string name="wx_circle">朋友圈</string>
    <string name="mini_program">小程序</string>
    <string name="share_cancel">取消</string>
    <string name="search">搜索</string>
    <string name="get_wechat">获取微信</string>
    <string name="community_detail">话题详情</string>
    <string name="send">发送</string>
    <string name="publish">发送</string>
    <string name="edit_content">编辑内容</string>
    <string name="tint">提示</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="notice">公告</string>
    <string name="contact_teacher">联系导师</string>
    <string name="plo_key">MTQzODEjYjk1YzMwNGYtZmZkZi00ZDMyLWI0M2QtMWE1ODhjNTQzZDBjIzE3MGY0N2FiLTE0NmUtNDgzMi1hYTRmLTMyZTk4YmRiNzNlNiMyYzg2NjFiZjg4YWE5OTFhOWJkYmFmMGFlYjIxMjgzYw==</string>
    <string name="more_comment">更多评论</string>
    <string name="more">更多</string>
    <string name="platform_guarantee">平台保障</string>
    <string name="tutor_commitment">导师入驻承诺</string>
    <string name="tutor_qualification">团队从业资格</string>
    <string name="buy_service">购买服务</string>
    <string name="free_consult">免费咨询</string>
    <string name="guarantee_content">已承诺平台交易担保规则，不私下交易，保障用户权益和资金安全</string>
    <string name="go_buy">立即购买</string>
    <string name="look_all">查看全部</string>
    <string name="history_search">历史搜索</string>
    <string-array name="community_array">
        <item>最新动态</item>
        <item>热门动态</item>
        <item>我的动态</item>
    </string-array>
    <string-array name="index_verbal">
        <item>应用话术</item>
        <item>场景话术</item>
    </string-array>
    <string-array name="tutor_detail_array">
        <item>简介</item>
        <item>课程</item>
    </string-array>
    <string name="index">首页</string>
    <string name="video">视频</string>
    <string name="study">教学</string>
    <string name="mine">我的</string>
    <string name="inVerbal">话术</string>
    <string name="video_loading_failed">视频加载失败</string>
    <string name="video_end_hint">添加咨询师微信，获取一对一在线解答</string>
    <string name="retry_replay">点击重播</string>
    <string name="wx_advisory">微信咨询</string>
    <string name="retry_click">点击重试</string>
</resources>