<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/layout_short_video_play_header" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.pili.pldroid.player.widget.PLVideoTextureView android:layout_gravity="center" android:id="@id/short_video_view" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <View android:layout_gravity="bottom" android:background="@drawable/mask_short_video_gradient_30" android:layout_width="fill_parent" android:layout_height="150.0dip" />
    <ImageView android:layout_gravity="center" android:id="@id/short_video_play_or_pause_iv" android:visibility="gone" android:layout_width="40.0dip" android:layout_height="40.0dip" android:src="@drawable/icon_short_play" />
    <com.mei.widget.progress.ProgressView android:layout_gravity="center" android:id="@id/short_video_loading" android:visibility="gone" android:layout_width="32.0dip" android:layout_height="32.0dip" app:pv_progressMode="indeterminate" app:pv_progressStyle="@style/CircularProgress" />
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/short_video_error_root" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/video_loading_failed" />
        <com.mei.widget.round.RoundTextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:id="@id/short_video_error_retry" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="120.0dip" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/retry_click" app:back_color="#ff484848" app:stroke_radius="20.0dip" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/short_video_end_person_short_root" android:background="#ff000000" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/short_video_end_person_ll" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:id="@id/short_video_end_person_iv" android:layout_width="80.0dip" android:layout_height="80.0dip" />
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/short_video_end_person_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" />
        </LinearLayout>
        <TextView android:textSize="15.0sp" android:textColor="#80ffffff" android:id="@id/short_video_end_hint_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/video_end_hint" />
        <com.mei.widget.round.RoundTextView android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:id="@id/short_video_end_person_get_wx" android:paddingLeft="40.0dip" android:paddingRight="40.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:minHeight="39.0dip" android:text="@string/wx_advisory" android:drawablePadding="9.0dip" android:drawableStart="@drawable/wx_login_white_icon" app:back_color="#ff229947" app:stroke_radius="20.0dip" />
        <TextView android:textSize="15.0sp" android:textColor="#80ffffff" android:id="@id/short_video_end_person_retry_play" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/retry_replay" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:layout_gravity="bottom" android:orientation="horizontal" android:id="@id/short_video_person_short_root" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:layout_marginStart="15.0dip">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/short_video_person_short_ll" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:id="@id/short_video_person_short_iv" android:layout_width="30.0dip" android:layout_height="30.0dip" />
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:ellipsize="end" android:id="@id/short_video_person_short_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:lines="1" android:maxEms="5" android:layout_marginStart="11.0dip" />
        </LinearLayout>
        <Space android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" />
        <com.mei.widget.round.RoundTextView android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:id="@id/short_video_person_get_wx_short" android:paddingLeft="40.0dip" android:paddingRight="40.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="38.0dip" android:text="@string/wx_advisory" android:drawablePadding="9.0dip" android:drawableStart="@drawable/wx_login_white_icon" android:layout_marginEnd="20.0dip" app:back_color="#66000000" app:stroke_radius="20.0dip" />
    </LinearLayout>
    <ProgressBar android:layout_gravity="bottom" android:id="@id/short_video_progress" android:layout_width="fill_parent" android:layout_height="2.0dip" android:max="100" android:progressDrawable="@drawable/short_video_play_progress_bg" style="?android:progressBarStyleHorizontal" />
</FrameLayout>