<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="220dp">

                    <ImageView
                        android:id="@+id/iv_tutor_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcv_tutor_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="15dp" />

                    <ImageView
                        android:id="@+id/tv_tutor_star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/rcv_tutor_detail"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="10dp"
                        android:src="@mipmap/star_two" />


                    <TextView
                        android:id="@+id/tv_tutor_detail_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/tv_tutor_star"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="10dp"
                        android:text="肖邦"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/iv_tutor_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="40dp"
                        android:src="@mipmap/efficient_course_back_icon" />

                    <ImageView
                        android:id="@+id/iv_tutor_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="15dp"
                        android:src="@mipmap/efficient_course_share_icon" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-10dp"
                    android:background="@drawable/index_content_bg"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_tutor_detail_aptitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp">

                        <TextView

                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableTop="@mipmap/tutor_icon_protection"
                            android:drawablePadding="5dp"
                            android:gravity="center"
                            android:text="@string/platform_guarantee"
                            android:textColor="@color/gray_222222"
                            android:textSize="12sp" />

                        <TextView

                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableTop="@mipmap/tutor_icon_commitment"
                            android:drawablePadding="5dp"
                            android:gravity="center"
                            android:text="@string/tutor_commitment"
                            android:textColor="@color/gray_222222"
                            android:textSize="12sp" />

                        <TextView

                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableTop="@mipmap/tutor_icon_qualification"
                            android:drawablePadding="5dp"
                            android:gravity="center"
                            android:text="@string/tutor_qualification"
                            android:textColor="@color/gray_222222"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:background="@color/gray_edebeb" />

                </LinearLayout>
            </LinearLayout>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:theme="@style/actionBarTheme"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <net.lucode.hackware.magicindicator.MagicIndicator
                    android:id="@+id/magicIndicator_tutor_detail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_edebeb" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/ll_top_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="45dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-10dp"
            android:background="@drawable/index_content_bg"
            android:orientation="vertical">


            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager_tutor_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>


    </LinearLayout>


    <!--<View-->
    <!--android:id="@+id/view_decoder"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_above="@id/ll_tutor_buy"-->
    <!--android:background="#88000000"-->
    <!--android:visibility="gone" />-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_edebeb" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="44dp">

                <RelativeLayout
                    android:id="@+id/rl_buy_service"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/tutor_white_ripple">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawableStart="@mipmap/tutor_service_icon_buy"
                        android:drawablePadding="3dp"
                        android:text="@string/buy_service"
                        android:textColor="@color/gray_222222"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_free_consult"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/tutor_course_btn">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawableStart="@mipmap/icon_wechat_white"
                        android:drawablePadding="3dp"
                        android:text="@string/free_consult"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>